Dynamically change ChromeVox toggle help string

Bug: 863093
Change-Id: I3307df10ca8c438c3683418f3e50c9e4859918bd
Reviewed-on: https://chromium-review.googlesource.com/1136530
Reviewed-by: Dan Erat <derat@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575927}